--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@remix-run/router": "^1.6.3",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -48,6 +50,9 @@
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.12.0",
+    "react-router-dom": "^6.12.0",
+    "react-router-native": "^6.12.0"
   }
 }
